feat: Integrate Supabase for data synchronization
Adds Supabase integration to enable cloud synchronization of child's data. Includes setup for local IndexedDB (Dexie) as a fallback and for offline support.

- **Dependencies:** Added `@supabase/supabase-js` and `dexie`.
- **Configuration:** Introduced `supabaseClient.ts` for Supabase connection details and a check for configuration.
- **Database:** Implemented `db.ts` for IndexedDB initialization, schema definition, and mock data loading.
- **Data Service:** Created `DataService` to abstract database operations and handle synchronization logic.
- **Types:** Added `synced` property to data models and `id` to `GrowthData` and `ChildProfile` for database compatibility.
- **Gemini Service:** Safely handles API key retrieval to prevent runtime errors.
- **App Component:** Includes imports for new DB and sync functionalities and additional icons for UI elements.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "react": "https://aistudiocdn.com/react@^19.2.1"
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "dexie": "https://esm.sh/dexie@3.2.4",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3"
   }
 }
 </script>
