feat: Integrate dexie-react-hooks for real-time DB updates
This commit introduces `dexie-react-hooks` to enable live queries from Dexie.js, providing real-time updates for the application's data.

Additionally, this commit includes:
- Updates to the CSP in `index.html` to allow loading resources from `esm.sh`.
- Changes the app icon references in `index.html` to point to a local `/icon.png`.
- Updates the `metadata.json` to use the English name "Little Moments".
- Refactors the Gemini API key retrieval in `services/geminiService.ts` to ensure it's always initialized with the environment variable and provides a warning if missing.
- Adds a 'Save' button and functionality to the `StoryGenerator` component to persist generated stories.
- Reorganizes and simplifies the main `App.tsx` component, leveraging the new `useLiveQuery` hook and improving component structure for better maintainability.
- Introduces a local `icon.png` to be used as the application icon.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="my">
   <head>
@@ -14,7 +15,8 @@
     <title>Little Moments</title>
     
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/3063/3063822.png" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="apple-touch-icon" href="/icon.png" />
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Padauk:wght@400;700&display=swap" rel="stylesheet">
@@ -87,7 +89,8 @@
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.87.1",
     "dexie": "https://esm.sh/dexie@^4.2.1",
     "vite": "https://esm.sh/vite@^7.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@^4.2.0"
   }
 }
 </script>
