--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.88.0",
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@^0.5.19",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "tailwindcss": "https://esm.sh/tailwindcss@^4.1.18",
+    "autoprefixer": "https://esm.sh/autoprefixer@^10.4.23"
   }
 }
 </script>
