--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.88.0",
-    "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@^0.5.19",
-    "vite": "https://esm.sh/vite@^7.3.0",
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "@google/genai": "https://esm.sh/@google/genai@0.1.1",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
+    "recharts": "https://esm.sh/recharts@2.12.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7",
+    "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
+    "dexie": "https://esm.sh/dexie@3.2.4",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "dexie": "https://esm.sh/dexie@^4.2.1"
+    "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
 </script>
