--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover" />
     <title>Little Moments</title>
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <link href="https://fonts.googleapis.com/css2?family=Padauk:wght@400;700&display=swap" rel="stylesheet">
   <script type="importmap">
 {
@@ -37,11 +39,6 @@
       e.preventDefault();
       return false;
     }
-  });
-
-  // Prevent back navigation on specific gestures if needed (Native feel)
-  window.addEventListener('popstate', function (event) {
-    // Custom logic can go here if we want to intercept back button
   });
 </script>
 </head>
