--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="theme-color" content="#FF9AA2" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Little Moments" />
     
     <title>Little Moments</title>
     
+    <!-- PWA and Icons Configuration -->
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
