--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.89.0",
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
     "dexie": "https://esm.sh/dexie@3.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@vitejs/plugin-react": "https://esm.sh/vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
