--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover" />
-    <meta name="theme-color" content="#0f172a" />
+    <meta name="theme-color" content="#FF9AA2" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Little Moments" />
@@ -28,7 +28,7 @@
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.89.0",
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
     "dexie": "https://esm.sh/dexie@3.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/vitejs/plugin-react@^5.1.2",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
