--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     "recharts": "https://esm.sh/recharts@2.15.4",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.89.0",
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
-    "dexie": "https://esm.sh/dexie@3.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0"
+    "@vitejs/plugin-react": "https://esm.sh/vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@capacitor/core": "https://esm.sh/@capacitor/core@6.0.0",
+    "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0",
+    "@capacitor/sqlite": "https://esm.sh/@capacitor/sqlite@6.0.0-1"
   }
 }
 </script>
