--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   }
 }
 </script>
+<script type="module" src="https://cdn.jsdelivr.net/npm/jeep-sqlite@2.6.4/dist/jeep-sqlite/jeep-sqlite.js"></script>
 </head>
   <body>
     <div id="root"></div>
