--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     "vite": "https://esm.sh/vite@^7.3.0",
     "@capacitor/core": "https://esm.sh/@capacitor/core@6.0.0",
     "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0",
-    "@capacitor/sqlite": "https://esm.sh/@capacitor/sqlite@6.0.0-1"
+    "@capacitor-community/sqlite": "https://esm.sh/@capacitor-community/sqlite@6.0.0-1"
   }
 }
 </script>
