--- a/index.html
+++ b/index.html
@@ -27,15 +27,12 @@
     "recharts": "https://esm.sh/recharts@2.15.4",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.89.0",
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
-    "@vitejs/plugin-react": "https://esm.sh/vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@capacitor/core": "https://esm.sh/@capacitor/core@6.0.0",
-    "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0",
-    "@capacitor-community/sqlite": "https://esm.sh/@capacitor-community/sqlite@6.0.0-1"
+    "dexie": "https://esm.sh/dexie@3.2.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
 </script>
-<script type="module" src="https://cdn.jsdelivr.net/npm/jeep-sqlite@2.6.4/dist/jeep-sqlite/jeep-sqlite.js"></script>
 </head>
   <body>
     <div id="root"></div>
