feat(camera): Integrate Capacitor camera for photo capture
Add Capacitor camera plugin to allow users to take photos directly within the app. This enhances the memory capture experience by enabling native camera access. Permissions are checked and requested if necessary.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
     "dexie": "https://esm.sh/dexie@3.2.7",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@capacitor/core": "https://esm.sh/@capacitor/core@6.0.0",
+    "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.0"
   }
 }
 </script>
