--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "vite": "https://esm.sh/vite@^7.3.0",
     "@capacitor/core": "https://esm.sh/@capacitor/core@6.0.0",
-    "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.0"
+    "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.0",
+    "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0"
   }
 }
 </script>
