feat: Integrate Cloudflare R2 for file storage
Switches the application's file storage backend from Supabase to Cloudflare R2. This change includes updating dependencies, modifying upload and delete functions to use the new R2 client, and refactoring existing logic to accommodate the shift.

This migration aims to improve scalability and potentially reduce storage costs by leveraging R2's object storage capabilities.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.0",
     "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@aws-sdk/client-s3": "https://esm.sh/@aws-sdk/client-s3@3.525.0"
   }
 }
 </script>
