--- a/index.html
+++ b/index.html
@@ -68,21 +68,23 @@
 {
   "imports": {
     "react": "https://esm.sh/react@18.3.1",
-    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
     "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "@google/genai": "https://esm.sh/@google/genai@0.12.0",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0",
     "recharts": "https://esm.sh/recharts@2.15.4",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.89.0",
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
     "dexie": "https://esm.sh/dexie@3.2.7",
-    "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@1.1.7",
+    "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@1.1.7?deps=react@18.3.1,dexie@3.2.7",
     "@capacitor/core": "https://esm.sh/@capacitor/core@6.0.0",
     "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.0",
     "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@aws-sdk/client-s3": "https://esm.sh/@aws-sdk/client-s3@3.525.0",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@aws-sdk/client-s3": "https://esm.sh/@aws-sdk/client-s3@3.525.0"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
