fix(deps): Use external dependencies in ESM imports
Updates ESM import URLs to explicitly mark React and React DOM as external dependencies where appropriate. This can lead to smaller bundle sizes and better caching by leveraging globally available or already imported React instances.

Additionally, the `AddMemory` component import has been simplified from dynamic import with a then clause to a direct lazy import, as it's now the default export.

The `Settings` icon was renamed to `SettingsIcon` to avoid a naming collision with the component itself.

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     "react-dom/": "https://esm.sh/react-dom@18.3.1/",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "@google/genai": "https://esm.sh/@google/genai@0.12.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.344.0",
-    "recharts": "https://esm.sh/recharts@2.15.4",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
+    "recharts": "https://esm.sh/recharts@2.15.4?external=react,react-dom",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.89.0",
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
     "dexie": "https://esm.sh/dexie@3.2.7",
-    "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@1.1.7?deps=react@18.3.1,dexie@3.2.7",
+    "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@1.1.7?external=react,dexie",
     "@capacitor/core": "https://esm.sh/@capacitor/core@6.0.0",
     "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.0",
     "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0",
