--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Padauk:wght@400;700&display=swap" rel="stylesheet">
     
-    <!-- Tailwind CSS CDN (Keeping for AI Studio preview as requested) -->
+    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     
-    <!-- Tailwind Configuration (Keeping for CDN fallback) -->
+    <!-- Tailwind Configuration -->
     <script>
       tailwind.config = {
         darkMode: 'class',
@@ -42,6 +42,7 @@
               'fade-in': 'fadeIn 0.5s ease-out forwards',
               'zoom-in': 'zoomIn 0.3s ease-out forwards',
               'slide-up': 'slideUp 0.4s ease-out forwards',
+              'slide-down': 'slideDown 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards',
             },
             keyframes: {
               fadeIn: {
@@ -55,6 +56,10 @@
               slideUp: {
                 '0%': { opacity: '0', transform: 'translateY(20px)' },
                 '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+              slideDown: {
+                '0%': { opacity: '0', transform: 'translate(-50%, -20px)' },
+                '100%': { opacity: '1', transform: 'translate(-50%, 0)' },
               }
             }
           }
@@ -68,7 +73,6 @@
     "react": "https://esm.sh/react@18.3.1",
     "react/": "https://esm.sh/react@18.3.1/",
     "react-dom": "https://esm.sh/react-dom@18.3.1",
-    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "@google/genai": "https://esm.sh/@google/genai@0.12.0",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
@@ -81,8 +85,9 @@
     "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.0",
     "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0",
     "@aws-sdk/client-s3": "https://esm.sh/@aws-sdk/client-s3@3.525.0",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "vite": "https://esm.sh/vite@^5.1.4",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.2.1",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
