feat: Improve PWA and mobile layout
Update `index.html` to use `black-translucent` for the iOS status bar style, providing a more immersive look. Also, update dependencies to their latest versions.

Adjust CSS in `index.css` to utilize `dvh` for consistent full-screen height and define a `--nav-height` variable for better padding management. This ensures content is not obscured by the navigation bar or home indicator on mobile devices.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#FF9AA2" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Little Moments" />
     
     <title>Little Moments</title>
@@ -80,22 +80,22 @@
     "@google/genai": "https://esm.sh/@google/genai@0.12.0",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
     "recharts": "https://esm.sh/recharts@2.15.4?external=react,react-dom",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.89.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.4",
     "@tailwindcss/typography": "https://esm.sh/@tailwindcss/typography@0.5.10",
     "dexie": "https://esm.sh/dexie@3.2.7",
     "dexie-react-hooks": "https://esm.sh/dexie-react-hooks@1.1.7?external=react,dexie",
-    "@capacitor/core": "https://esm.sh/@capacitor/core@6.0.0",
-    "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.0",
-    "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.0",
-    "@aws-sdk/client-s3": "https://esm.sh/@aws-sdk/client-s3@3.525.0",
-    "vite": "https://esm.sh/vite@^5.1.4",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.2.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "@capacitor/core": "https://esm.sh/@capacitor/core@6.1.2",
+    "@capacitor/camera": "https://esm.sh/@capacitor/camera@6.0.2",
+    "@capacitor/filesystem": "https://esm.sh/@capacitor/filesystem@6.0.1",
+    "@aws-sdk/client-s3": "https://esm.sh/@aws-sdk/client-s3@3.662.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
   </head>
-  <body>
+  <body class="bg-[#FDFCFB] dark:bg-slate-900">
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
   </body>
