feat: Enhance scrolling and navigation behavior
Adjusts scroll thresholds for navigation visibility and smooth scrolling. Updates UI element selection behavior for better user experience. Reorders navigation items for logical flow. Adds transition to body background for smoother dark mode switching.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 }
 </script>
   </head>
-  <body class="bg-[#FDFCFB] dark:bg-slate-900">
+  <body class="bg-[#FDFCFB] dark:bg-slate-900 transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
   </body>
