--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" class="scrollbar">
+<html lang="en" class="no-scrollbar">
   <head>
     <meta charset="utf-8" />
     <meta
